# th_cnd_utils

./: README.md  UTILS_CALL_GUIDE.md  UTILS_CALL_REPORT.md  requirements.txt  run_tkinter_app.py
th_cnd_utils/: LICENSE  MANIFEST.in  PACKAGE_STRUCTURE.md  README.md  __init__.py  config.py  example_usage.py  flask_util.py  pyproject.toml  service_client.py  setup.py  test_package.py  web_app_client.py
th_cnd_utils/cloud/: __init__.py  oss.py  ots.py
th_cnd_utils/db/: __init__.py  mysql.py  rabbitmq.py  redis.py  sqlite.py
th_cnd_utils/examples/: service_client_example.py  web_app_client_example.py
th_cnd_utils/th_cnd_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tkinter_app/: README.md  UTILS_CALL_GUIDE.md  app.py  requirements.txt
tkinter_app/modules/: code_executor.py  code_generator.py  ui.py
web_app/: README.md  app.py  requirements.txt
web_app/static/css/: style.css
web_app/static/js/: main.js
web_app/templates/: index.html
